# learn-render-engine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: generate_headers.cmake  version.h.in
docs/: BUILD.md  coding-style.md  git-style.md
src/: CMakeLists.txt  config.h
src/graphics/: CMakeLists.txt  sr_engine.hpp
src/graphics/vulkan/: CMakeLists.txt  backend.cpp  backend.hpp  backend_vulkan.hpp
src/win64/: main.cpp
